Fix: Reduce z-index for some elements below embedded calendar popup

--- a/src/css/editor.scss
+++ b/src/css/editor.scss
@@ -30,11 +30,13 @@
 	}
 }
 
+// TODO: remove once we drop Nextcloud 32 support (Nextcloud 33 has new outline)
 .editor--outline {
 	border-radius: var(--border-radius-large);
 	box-shadow: 0 1px 10px var(--color-box-shadow);
 	background-color: var(--color-main-background);
-	z-index: 10021;
+	// Display above text menubar, but below dialogs and calendar event popover
+	z-index: 5;
 }
 
 @media print {
